--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
-    "clean": "node node_modules/rimraf/bin lib",
-    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000"
+    "clean": "node node_modules/rimraf/bin lib"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -22,9 +21,7 @@
     "@colyseus/testing": "^0.14.21",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
-    "@types/mocha": "^8.2.3",
     "copyfiles": "^2.4.1",
-    "mocha": "^9.0.2",
     "rimraf": "^2.7.1",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63",
