--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
+    "proto-build": "pbjs -t static-module -o proto-dist/dfgpb.js proto-src/dfgpb.proto && pbts -o proto-dist/dfgpb.d.ts proto-dist/dfgpb.js",
     "clean": "node node_modules/rimraf/bin lib",
     "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000"
   },
