--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "devDependencies": {
     "@colyseus/loadtest": "^0.14.4",
     "@colyseus/testing": "^0.14.21",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/mocha": "^8.2.3",
+    "chai-as-promised": "^7.1.1",
     "copyfiles": "^2.4.1",
     "mocha": "^9.0.2",
     "rimraf": "^2.7.1",
@@ -34,6 +36,8 @@
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
     "@colyseus/monitor": "^0.14.20",
+    "@types/chai": "^4.2.21",
+    "chai": "^4.3.4",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
     "express": "^4.16.4",
