--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
     "@colyseus/monitor": "^0.14.20",
+    "@mojotech/json-type-validation": "^3.1.0",
     "@types/chai": "^4.2.21",
+    "@types/sinon": "^10.0.2",
     "chai": "^4.3.4",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "protobufjs": "~6.11.2"
+    "sinon": "^11.1.1"
   }
 }
