--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "proto-build": "pbjs -t static-module -o proto-dist/dfgpb.js proto-src/dfgpb.proto && pbts -o proto-dist/dfgpb.d.ts proto-dist/dfgpb.js",
     "clean": "node node_modules/rimraf/bin lib",
-    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000"
+    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000",
     "fmt-lint": "prettier -c test/**/*.ts src/**/*.ts",
     "fmt": "prettier -w src/**/*.ts test/**/*.ts",
-    "lint": "eslint . --ext ts",
+    "lint": "eslint . --ext ts"
   },
   "author": "Yukio Nozawa",
   "license": "UNLICENSED",
