Fix / disable all errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "src"
+    "src",
+    "test",
+    "loadtest",
+    "msg-src"
   ]
 }
