use dot reporter for test

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "proto-build": "pbjs -t static-module -o proto-dist/dfgpb.js proto-src/dfgpb.proto && pbts -o proto-dist/dfgpb.d.ts proto-dist/dfgpb.js",
     "clean": "node node_modules/rimraf/bin lib",
-    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000",
+    "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000 --reporter dot",
     "fmt-lint": "prettier -c test/**/*.ts src/**/*.ts",
     "fmt": "prettier -w src/**/*.ts test/**/*.ts",
     "lint": "eslint . --ext ts"
@@ -47,7 +47,7 @@
     "chai": "^4.3.4",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
-    "dfg-simulator": "0.1.19",
+    "dfg-simulator": "0.1.21",
     "eslint": "^7.31.0",
     "express": "^4.16.4",
     "prettier": "^2.3.2",
