--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dfg-simulator": "0.1.26",
     "eslint": "^7.31.0",
     "express": "^4.16.4",
+    "otplib": "^12.0.1",
     "prettier": "^2.3.2",
     "sinon": "^11.1.1"
   }
