--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@colyseus/monitor": "^0.14.20",
     "@mojotech/json-type-validation": "^3.1.0",
     "@types/chai": "^4.2.21",
+    "@types/clone": "^2.1.1",
     "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
+    "clone": "^2.1.2",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
     "dfg-messages": "github:yncat/dfg-messages#master",
