--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
-    "schema:build": "schema-codegen src/rooms/schema/game.ts --output client-side/ --ts && schema-codegen src/rooms/schema/global.ts --output client-side/ --ts",
-    "schema:copy": "copyfiles client-side/*.ts ../dfg/src/logic/schema-def",
+    "schema:build": "schema-codegen src/rooms/schema/game.ts --output schema-def/ --ts && schema-codegen src/rooms/schema/global.ts --output schema-def/ --ts",
+    "schema:copy": "copyfiles schema-def/*.ts ../dfg/src/logic",
     "clean": "node node_modules/rimraf/bin lib",
     "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000 --reporter dot",
     "fmt-lint": "prettier -c test/**/*.ts src/**/*.ts",
