--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
   "devDependencies": {
     "@colyseus/loadtest": "^0.14.4",
     "@colyseus/testing": "^0.14.21",
+    "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/mocha": "^8.2.3",
-    "chai-as-promised": "^7.1.1",
-    "copyfiles": "^2.4.1",
-    "mocha": "^9.0.2",
-    "rimraf": "^2.7.1",
-    "ts-node": "^8.1.0",
-    "ts-node-dev": "^1.0.0-pre.63",
     "@types/sinon": "^10.0.2",
-    "@types/chai": "^4.2.21",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.31.0",
+    "mocha": "^9.0.2",
     "prettier": "^2.3.2",
+    "rimraf": "^2.7.1",
     "sinon": "^11.1.1",
+    "ts-node": "^8.1.0",
+    "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^3.4.5"
   },
   "dependencies": {
@@ -55,7 +55,6 @@
     "cors": "^2.8.5",
     "dfg-messages": "github:yncat/dfg-messages#master",
     "dfg-simulator": "0.1.32",
-    "express": "^4.16.4",
-    "otplib": "^12.0.1"
+    "express": "^4.16.4"
   }
 }
