--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "url": "https://github.com/colyseus/create-colyseus/issues"
   },
   "homepage": "https://github.com/colyseus/create-colyseus#readme",
+  "engines": {
+    "node": "15.x"
+  },
   "devDependencies": {
     "@colyseus/loadtest": "^0.14.4",
     "@colyseus/testing": "^0.14.21",
