--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
+    "build": "echo 'not used.'",
     "schema:build": "schema-codegen src/rooms/schema/game.ts --output schema-def/ --ts && schema-codegen src/rooms/schema/global.ts --output schema-def/ --ts",
     "schema:copy": "copyfiles schema-def/*.ts ../dfg/src/logic",
     "clean": "node node_modules/rimraf/bin lib",
@@ -43,11 +43,7 @@
     "eslint": "^7.31.0",
     "mocha": "^9.0.2",
     "prettier": "^2.3.2",
-    "rimraf": "^2.7.1",
-    "sinon": "^11.1.1",
-    "ts-node": "^8.1.0",
-    "ts-node-dev": "^1.0.0-pre.63",
-    "typescript": "^3.4.5"
+    "rimraf": "^2.7.1"
   },
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
@@ -60,6 +56,10 @@
     "dfg-messages": "github:yncat/dfg-messages#master",
     "dfg-simulator": "^1.2.6",
     "express": "^4.16.4",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "sinon": "^11.1.1",
+    "ts-node": "^8.1.0",
+    "ts-node-dev": "^1.0.0-pre.63",
+    "typescript": "^3.4.5"
   }
 }
