--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "node": "16.x"
   },
   "devDependencies": {
-    "@colyseus/loadtest": "^0.14.4",
-    "@colyseus/testing": "^0.14.21",
+    "@colyseus/loadtest": "^0.15.2",
+    "@colyseus/testing": "^0.15.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/cors": "^2.8.6",
@@ -48,12 +48,12 @@
     "rimraf": "^2.7.1"
   },
   "dependencies": {
-    "@colyseus/arena": "^0.14.22",
-    "@colyseus/monitor": "^0.14.20",
+    "@colyseus/tools": "^0.15.2",
+    "@colyseus/monitor": "^0.15.1",
     "@mojotech/json-type-validation": "^3.1.0",
     "@types/clone": "^2.1.1",
     "clone": "^2.1.2",
-    "colyseus": "^0.14.20",
+    "colyseus": "^0.15.2",
     "cors": "^2.8.5",
     "dfg-messages": "github:yncat/dfg-messages#master",
     "dfg-simulator": "^1.3.5",
