--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,15 +16,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
       - name: install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: check lint
-        run: npm run lint
+        run: pnpm run lint
       - name: run tests
-        run: npm run test
+        run: pnpm run test
       - name: run build
-        run: npm run build
+        run: pnpm run build
