--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: "10.25.0"
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
